@@ -2,9 +2,9 @@
 #
 # @param pki
 #   * If 'simp', include SIMP's pki module and use pki::copy to manage
-#     application certs in /etc/pki/simp_apps/autofs/pki
+#     application certs in /etc/pki/simp_apps/autofs/x509
 #   * If true, do *not* include SIMP's pki module, but still use pki::copy
-#     to manage certs in /etc/pki/simp_apps/autofs/pki
+#     to manage certs in /etc/pki/simp_apps/autofs/x509
 #   * If false, do not include SIMP's pki module and do not use pki::copy
 #     to manage certs.  You will need to appropriately assign a subset of:
 #     * app_pki_dir
@@ -15,14 +15,14 @@
 #
 # @param app_pki_external_source
 #   * If pki = 'simp' or true, this is the directory from which certs will be
-#     copied, via pki::copy.  Defaults to /etc/pki/simp.
+#     copied, via pki::copy.  Defaults to /etc/pki/simp/x509.
 #
 #   * If pki = false, this variable has no effect.
 #
 # @param app_pki_dir
 #   This variable controls the basepath of $app_pki_key, $app_pki_cert,
 #   $app_pki_ca, $app_pki_ca_dir, and $app_pki_crl.
-#   It defaults to /etc/pki/simp_apps/autofs/pki.
+#   It defaults to /etc/pki/simp_apps/autofs/x509.
 #
 # @param app_pki_key
 #   Path and name of the private SSL key file
@@ -31,8 +31,8 @@
 #   Path and name of the public SSL certificate
 #
 class autofs::config::pki(
-  Stdlib::Absolutepath  $app_pki_external_source  = simplib::lookup('simp_options::pki::source', { 'default_value' => '/etc/pki/simp' }),
-  Stdlib::Absolutepath  $app_pki_dir              = '/etc/pki/simp_apps/autofs/pki',
+  Stdlib::Absolutepath  $app_pki_external_source  = simplib::lookup('simp_options::pki::source', { 'default_value' => '/etc/pki/simp/x509' }),
+  Stdlib::Absolutepath  $app_pki_dir              = '/etc/pki/simp_apps/autofs/x509',
   Stdlib::Absolutepath  $app_pki_cert             = "${app_pki_dir}/public/${::fqdn}.pub",
   Stdlib::Absolutepath  $app_pki_key              = "${app_pki_dir}/private/${::fqdn}.pem"
 ) {
