@@ -1,5 +1,6 @@
 * Tue Jan 10 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
 - Updated pki scheme
+- Application certs now managed in /etc/pki/simp_apps/autofs/x509
 
 * Mon Jan 02 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
 - Ripped out all NFS materials
